--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -117,6 +117,14 @@
         font-size: 10px;
     }
 
+    .main__linea {
+        width: 120px;
+        height: 2px;
+        background-color: var(--color-uno);
+        text-align: center;
+        margin: 15px auto;
+    }
+
 
 
     /*Precursores (Videos de Youtube*/
@@ -439,7 +447,7 @@
             "img6 img7"
             "img8 img8"
             "img8 img8"
-            ;
+        ;
         gap: .8em;
     }
 
@@ -652,10 +660,35 @@
     .main__titulo {
         font-size: 35px;
         letter-spacing: 1px;
+        font-weight: 600;
+        margin: 5px auto;
+        letter-spacing: 3px;
     }
 
     .main__tituloPre {
-        font-size: 19px;
+        font-size: 14px;
+        letter-spacing: 5px;
+    }
+
+    .main__tituloFondo {
+        position: absolute;
+        top: .4em;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        font-size: 210px;
+        letter-spacing: 1px;
+        line-height: 80px;
+        font-family: 'Cardo', serif;
+        color: rgba(138, 128, 128, 0.05);
+        user-select: none;
+    
+    }
+
+    .main__tituloSub {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 5px;
     }
 
     .main__btn {
