--- a/style.css
+++ b/style.css
@@ -186,6 +186,10 @@ section[id] {
   cursor: pointer;
 }
 
+.navbar__link:hover{
+  color: var(--color-tres);
+}
+
 .navbar__link--activo {
   /* border-bottom: 2px solid var(--color-cuatro); */
   color: var(--color-tres);
@@ -254,7 +258,7 @@ section[id] {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   margin: 55px auto;
-  letter-spacing: 8px;
+  letter-spacing: 2px;
 }
 
 .main__tituloPre {
