--- a/style.css
+++ b/style.css
@@ -178,11 +178,11 @@ section[id] {
 }
 
 .navbar__link {
-  font-size: 11px;
+  font-size: 12px;
   list-style: none;
-  letter-spacing: 2px;
+  letter-spacing: 0;
   margin: 0 12px;
-  padding: 8px;
+  padding: 4px;
   cursor: pointer;
 }
 
@@ -254,7 +254,7 @@ section[id] {
 }
 
 .main__titulo {
-  font-size: 6em;
+  font-size: 4em;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   margin: 55px auto;
@@ -591,9 +591,7 @@ section[id] {
 .mision__titulo {
   font-size: 65px;
   font-family: 'Montserrat', sans-serif;
-  letter-spacing: 10px;
-  font-weight: 400;
-
+  letter-spacing: 8px;
 }
 
 .mision__tituloSub {
@@ -666,6 +664,8 @@ section[id] {
 .aside__titulo {
   font-size: 65px;
   font-family: 'Montserrat', sans-serif;
+  margin: 15px auto;
+  letter-spacing: 8px;
 }
 
 .aside__subtitulo {
@@ -720,9 +720,8 @@ section[id] {
 .iglesia__titulo {
   font-size: 65px;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
   margin: 15px auto;
-  letter-spacing: 10px;
+  letter-spacing: 8px;
 }
 
 .iglesia__tituloPre {
@@ -1008,12 +1007,13 @@ section[id] {
 }
 
 .galeria__titulo {
-  font-size: 50px;
+  font-size: 65px;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  letter-spacing: 10px;
+  margin: 15px auto;
+  letter-spacing: 8px;
   padding: .8em 0 1.4em;
   color: black;
+
 }
 
 .galeria__picture {
