overflow hiden footer

--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -80,7 +80,7 @@
         left: 0;
         width: 100vw;
         height: 100%;
-        font-size: .8em;
+        font-size: 1.8em;
         display: flex;
         flex-direction: column;
         align-items: center;
