--- a/style.css
+++ b/style.css
@@ -607,7 +607,8 @@ section[id] {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 2px;
   font-size: 16px;
-  line-height: 21px;
+  font-weight: 300;
+  line-height: 25px;
   margin-top: 4em;
   text-align: left;
 }
@@ -1192,6 +1193,7 @@ section[id] {
   height: auto;
   background-color: var(--color-cinco);
   grid-area: footer;
+  overflow: hidden;
 }
 
 /*Grupo1*/
