--- a/style.css
+++ b/style.css
@@ -691,6 +691,47 @@ section[id] {
   margin: 4em auto;
 }
 
+/* aside podcast */
+
+.aside__texto2 {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  color: white;
+  z-index: 1;
+  margin-top: 6em;
+}
+
+.aside__titulo2 {
+  font-size: 65px;
+  font-family: 'Montserrat', sans-serif;
+  margin: 15px auto;
+  letter-spacing: 8px;
+}
+
+.aside__subtitulo2 {
+  font-size: 1em;
+  margin-top: 30px;
+  letter-spacing: 10px;
+}
+
+.aside__iframe {
+  display: flex;
+  width: 90%;
+  height: auto;
+  z-index: 1;
+  margin-bottom: 120px;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.aside__iframe iframe {
+  width: 400px;
+  height: 250px;
+  margin: 4em auto;
+}
+
+
 
 /*iglesia */
 
