ver mas! youtube

--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -931,6 +931,46 @@
         height: 200;
     }
 
+    /* aside ultimas reuniones */
+    .aside__texto3 {
+        width: 100%;
+        height: auto;
+        text-align: center;
+        color: white;
+        z-index: 1;
+        margin-top: 50px;
+
+    }
+
+    .aside__titulo3 {
+        font-size: 40px;
+        letter-spacing: 8px;
+        font-family: 'Roboto', sans-serif;
+        text-align: center;
+        line-height: 1.2em;
+        margin-top: 10px;
+        font-weight: 100;
+
+    }
+
+    .aside__subtitulo3 {
+        font-size: 15px;
+        margin-top: 10px;
+        letter-spacing: 8px;
+
+    }
+
+    .aside__iframe {
+        width: 70%;
+        display: block;
+    }
+
+    .aside__iframe iframe {
+        width: 400px;
+        height: 200;
+    }
+
+
 
 
 
