--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section[id] {
   font-size: 13px;
   white-space: nowrap;
   border-right: 4px solid;
-  width: 13ch;
+  width: 30ch;
 
   animation: typing 2s steps(12), blink .5s infinite step-end alternate;
   overflow: hidden;
@@ -186,7 +186,7 @@ section[id] {
   cursor: pointer;
 }
 
-.navbar__link:hover{
+.navbar__link:hover {
   color: var(--color-tres);
 }
 
@@ -460,8 +460,8 @@ section[id] {
   width: 90%;
   color: black;
   padding: 60px;
- 
-  
+
+
 }
 
 .nosotros__titulo--uno {
@@ -503,7 +503,7 @@ section[id] {
   color: black;
   padding: 60px;
   text-align: left;
- 
+
 
 }
 
@@ -715,21 +715,56 @@ section[id] {
   letter-spacing: 10px;
 }
 
-.aside__iframe {
-  display: flex;
-  width: 90%;
+/* aside ultimas reuniones */
+
+.aside__texto3 {
+  width: 100%;
   height: auto;
+  text-align: center;
+  color: white;
   z-index: 1;
-  margin-bottom: 120px;
-  align-items: center;
-  justify-content: space-around;
+  margin-top: 6em;
 }
 
-.aside__iframe iframe {
-  width: 400px;
-  height: 250px;
-  margin: 4em auto;
+.aside__titulo3 {
+  font-size: 65px;
+  font-family: 'Montserrat', sans-serif;
+  margin: 15px auto;
+  letter-spacing: 8px;
 }
+
+.aside__subtitulo3 {
+  font-size: 1em;
+  margin-top: 30px;
+  letter-spacing: 10px;
+}
+
+.aside__btn {
+  z-index: 1;
+  background-color: var(--color-uno);
+  border-radius: 8px;
+  padding: 8px;
+  margin: 2em auto 4em;
+  cursor: pointer;
+}
+
+.aside__btn input {
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+.aside__btn:hover {
+  border: none;
+  cursor: pointer;
+  background-color: var(--color-tres);
+}
+
+
+
+
 
 
 
@@ -1048,15 +1083,29 @@ section[id] {
   padding: .8em;
 }
 
+.galeria__texto {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  color: black;
+  z-index: 1;
+  margin: 5em auto 3em;
+}
+
 .galeria__titulo {
   font-size: 65px;
   font-family: 'Montserrat', sans-serif;
   margin: 15px auto;
   letter-spacing: 8px;
-  padding: .8em 0 1.4em;
-  color: black;
-
 }
+
+.galeria__subtitulo {
+  font-size: 1em;
+  margin-top: 30px;
+  letter-spacing: 10px;
+}
+
+
 
 .galeria__picture {
   position: relative;
