--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1041px) {
 
-    .navbar__link{
+    .navbar__link {
         font-size: 10px;
         list-style: none;
         letter-spacing: 0;
@@ -88,7 +88,7 @@
         transform: translateY(-80em);
         transition: all 1.2s ease-in-out;
 
-        
+
 
 
     }
@@ -596,6 +596,43 @@
     body {
         background-color: whitesmoke;
         width: 100%;
+    }
+
+
+    /*Louder*/
+
+    .loader__contenedor {
+        width: 100vw;
+        height: 100vh;
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 99999;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .loader__imagen {
+        width: 50px;
+        height: auto;
+        z-index: 99999;
+    }
+
+    .loader__texto {
+        display: block;
+        color: black;
+        font-family: monospace;
+        font-size: 8px;
+        white-space: nowrap;
+        border-right: 4px solid;
+        width: 30ch;
+
+        animation: typing 2s steps(12), blink .5s infinite step-end alternate;
+        overflow: hidden;
     }
 
     .contenedor {
