--- a/reuniones.css
+++ b/reuniones.css
@@ -192,12 +192,13 @@ section[id] {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    gap: 1.6em;
     z-index: 1;
 }
 
 .aside__iframe--reuniones iframe {
     width: 400px;
-    height: auto;
+    height: 300px;
     margin: 4em auto;
 }
 
@@ -208,7 +209,7 @@ section[id] {
     text-align: center;
     color: white;
     z-index: 1;
-    margin-top: 6em;
+    margin: 6em auto 2em;
 }
 
 .aside__titulo3--reuniones {
@@ -233,15 +234,22 @@ section[id] {
     cursor: pointer;
 }
 
-.aside__social{
+.aside__social {
     font-size: 1em;
-    display: flex;
+    display: inline-flex;
+    color: white;
+    z-index: 999
 }
 
-.aside__social i{
-   margin: 10px;
-   color: var(--color-cinco);
+.aside__social i {
+    margin: 15px;
 }
+
+.aside__social i:hover {
+    color: var(--color-tres);
+    transform: scale(1.2);
+}
+
 
 /*footer*/
 .footer {
@@ -271,17 +279,39 @@ section[id] {
 
 /* `sm` applies to x-small devices (portrait phones, less than 576px)*/
 @media only screen and (max-width: 580px) {
+
+    .navbar__link:hover {
+        transform: scale(1.2);
+    }
+
     .aside__titulo3--reuniones {
         font-size: 40px;
         font-family: 'Montserrat', sans-serif;
         margin: 15px auto;
         letter-spacing: 8px;
+        line-height: 45px;
     }
 
-    .aside__subtitulo3--reuniones{
+    .aside__subtitulo3--reuniones {
         font-size: 15px;
         margin-top: 10px;
         letter-spacing: 8px;
+    }
+
+
+    .aside__iframe--reuniones {
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+    }
+
+    .aside__iframe--reuniones iframe {
+        width: 400px;
+        height: 300px;
+        margin: 4em auto;
     }
 
 }
