--- a/reuniones.css
+++ b/reuniones.css
@@ -146,7 +146,7 @@ section[id] {
     justify-content: center;
     padding: 0;
     position: relative;
-    background: url(img/teclado.jpg);
+    background: url(img/main.png);
     background-size: cover;
     background-attachment: fixed;
 }
