--- a/style.css
+++ b/style.css
@@ -1016,9 +1016,10 @@ section[id] {
   text-align: center;
 }
 
-.popup__text h1 {
+.popup__text h2 {
   font-size: 30px;
   color: black;
+  text-align: center;
 }
 
 .popup__text p {
