--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -47,13 +47,14 @@
         display: grid;
 
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(11, auto);
+        grid-template-rows: repeat(12, auto);
         grid-template-areas:
             'header    header    header'
             'nav       nav       nav'
             'main      main      main'
             'article   article   article'
-            'nosotros  nosotros  nosotros'
+            'divLeft   divLeft   divLeft'
+            'divRight  divRight  divRight'
             'mision    mision    mision'
             'aside     aside     aside'
             'section   section   section'
@@ -197,116 +198,6 @@
         width: 95%;
         padding: 60px;
     }
-
-    /* Nosotros */
-    .nosotros {
-        grid-area: nosotros;
-        width: 100%;
-        height: auto;
-        /* background-color: #DFDBE5; */
-        /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.2'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        row-gap: 20px;
-        column-gap: 20px;
-        align-items: center;
-        justify-content: center;
-        padding: 0px;
-        overflow: hidden;
-
-    }
-
-    /* texto e imagen Uno */
-    .nosotros__textoUno {
-        width: 100%;
-        text-align: center;
-        padding: 1em;
-        margin: 2em auto;
-        background-color: white;
-
-    }
-
-    .nosotros__titulo--uno {
-        font-size: 50px;
-        letter-spacing: 8px;
-        margin: 1em auto 0;
-        text-align: center;
-    }
-
-    .nosotros__tituloSub--uno {
-        font-size: 10px;
-        font-weight: 600;
-        letter-spacing: 15px;
-        text-align: center;
-        margin: 25px auto;
-    }
-
-    .nosotros__parrafo--uno {
-        width: 90%;
-        margin: 0 auto 2em;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 300;
-        letter-spacing: 0px;
-        font-size: 12px;
-        line-height: 20px;
-        text-align: justify;
-
-    }
-
-    .nosotros__imagenUno {
-        width: 100%;
-        margin: 0 auto;
-        padding: 0;
-    }
-
-    /* texto e imagen Dos */
-    .nosotros__textoDos {
-        width: 100%;
-        text-align: center;
-        padding: 1em;
-        margin: 2em auto;
-        background: white;
-        border-radius: 20px;
-
-
-    }
-
-    .nosotros__titulo--dos {
-        font-size: 50px;
-        letter-spacing: 8px;
-        margin: 1em auto 0;
-        text-align: center;
-        order: 1;
-    }
-
-    .nosotros__tituloSub--dos {
-        font-size: 10px;
-        font-weight: 600;
-        letter-spacing: 15px;
-        text-align: center;
-        margin: 25px auto;
-        order: 2;
-    }
-
-    .nosotros__parrafo--dos {
-        width: 90%;
-        margin: 0 auto 2em;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 300;
-        letter-spacing: 0px;
-        font-size: 12px;
-        line-height: 20px;
-        text-align: justify;
-        order: 4;
-    }
-
-    .nosotros__imagenDos {
-        width: 100%;
-        margin: 0 auto;
-        padding: 0;
-        order: 3;
-    }
-
 
 
     /* estructura de texto y foto */
@@ -630,14 +521,15 @@
         display: grid;
 
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(10, auto);
+        grid-template-rows: repeat(12, auto);
         grid-template-areas:
 
             'header    header    header'
             'nav       nav       nav'
             'main      main      main'
             'article   article   article'
-            'nosotros  nosotros  nosotros'
+            'divLeft   divLeft   divLeft'
+            'divRight  divRight  divRight'
             'mision    mision    mision'
             'aside     aside     aside '
             'section   section   section'
@@ -796,6 +688,54 @@
 
 
     /* Nosotros */
+    .dividida__left {
+        grid-area: divLeft;
+        height: 100%;
+        background-image: url(img/teclado.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow: hidden;
+    }
+
+    .left__textoDos {
+        width: 90%;
+        height: auto;
+        border-radius: 20px;
+        color: white;
+        margin: 20px auto;
+        background-color: rgba(59, 64, 134, .7);
+    }
+
+
+
+    .dividida__right {
+        grid-area: divRight;
+        height: 100%;
+        background-image: url(img/alabanza4.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: top;
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow: hidden;
+
+    }
+
+    .right__textoDos {
+        width: 90%;
+        color: white;
+        margin: 20px auto;
+        border-radius: 20px;
+        padding: 60px;
+        text-align: right;
+        background-color: rgba(131, 26, 26, 0.541);
+
+
+    }
+
 
 
     /* estructura de texto y foto */
@@ -1214,14 +1154,56 @@
         color: aqua;
     }
 
-    /* nosotros */
-    .nosotros__titulo--dos {
-        font-size: 50px;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 600;
-        letter-spacing: 15px;
-        line-height: 50px;
+    
+    /* Nosotros */
+    .dividida__left {
+        grid-area: divLeft;
+        height: 100%;
+        background-image: url(img/teclado.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: grid;
+        grid-template-columns: 1fr;
+       
     }
+
+    .left__textoDos {
+        width: 90%;
+        height: auto;
+        border-radius: 20px;
+        color: white;
+        margin: 20px auto;
+        background-color: rgba(59, 64, 134, .7);
+    }
+
+
+
+    .dividida__right {
+        grid-area: divRight;
+        height: 100%;
+        background-image: url(img/alabanza4.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: top;
+        display: grid;
+        grid-template-columns: 1fr;
+        overflow: hidden;
+
+    }
+
+    .right__textoDos {
+        width: 90%;
+        color: white;
+        margin: 20px auto;
+        border-radius: 20px;
+        padding: 60px;
+        text-align: right;
+        background-color: rgba(131, 26, 26, 0.541);
+
+
+    }
+
 
     /* Galeria */
     .galeria__titulo {
