--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ section[id] {
 /*Lista enlaces*/
 .navbar__item {
   margin-right: 4em;
-  font-weight: 600;
+  font-weight: 400;
   display: flex;
   text-transform: uppercase;
   color: black;
@@ -196,20 +196,12 @@ section[id] {
   color: var(--color-tres);
 }
 
-/*icono buscar*/
-.navbar__buscar {
-  margin-right: 20px;
-  color: var(--color-cinco);
-}
-
 /*icono hamburguesa*/
 .navbar__menu {
   display: none;
 }
 
-.navbar__parrafo {
-  display: none;
-}
+
 
 
 /*Main (contendido principal*/
@@ -440,10 +432,10 @@ section[id] {
 
 /* Pantalla dividida izquierda*/
 
-.dividida__left {
+.dividida__left{
   grid-area: divLeft;
   height: 100%;
-  background-image: url(img/teclado.jpg);
+  background-image: url(img/nosotros\ \(600x400px\).jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -451,6 +443,39 @@ section[id] {
   grid-template-columns: repeat(2, 1fr);
   padding: 0px;
   overflow: hidden;
+  position: relative;
+}
+
+.dividida__left::before{
+  width: 100%;
+  height: auto;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .7);
+  z-index: 1;
+}
+
+.left__imagen--right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+} 
+
+.left__frase{
+  color: white;
+  text-align: center;
+  font-family: 'Cardo', serif;
+  font-size: 25px;
+  font-weight: 100;
+  padding: 1.5em;
+  z-index: 1;
+  
+  
 }
 
 .left__textoDos {
@@ -461,6 +486,7 @@ section[id] {
   text-align: left;
   /* background: linear-gradient( var(--color-tres), rgba(255, 255, 255, 0.289), rgba(0, 0, 255, 0.1)); */
   background-color: rgba(59, 64, 134, 0.275);
+  z-index: 9;
 
 
 }
@@ -474,7 +500,7 @@ section[id] {
 }
 
 .left__tituloSub--dos {
-  font-size: 10px;
+  font-size: 15px;
   font-weight: 400;
   letter-spacing: 20px;
   margin-top: 10px;
@@ -489,10 +515,6 @@ section[id] {
   text-align: justify;
 }
 
-.left__imagen--right {
-  width: 50%;
-  height: auto;
-}
 
 
 /* Pantalla dividida derecha*/
@@ -500,15 +522,48 @@ section[id] {
 .dividida__right {
   grid-area: divRight;
   height: 100%;
-  background-image: url(img/alabanza4.jpg);
+  background-image: url(img/javier.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding: 0px;
   overflow: hidden;
+  position: relative;
 
+}
+
+.dividida__right::before{
+  width: 100%;
+  height: auto;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .9);
+  z-index: 1;
+}
+
+
+.right__imagen--left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+} 
+
+
+.right__frase{
+  color: white;
+  text-align: center;
+  font-family: 'Cardo', serif;
+  font-size: 25px;
+  font-weight: 100;
+  padding: 1.5em;
+  z-index: 1; 
 }
 
 .right__textoDos {
@@ -519,6 +574,7 @@ section[id] {
   text-align: right;
   /* background: linear-gradient( var(--color-tres), rgba(255, 255, 255, 0.289), rgba(0, 0, 255, 0.1)); */
   background-color: rgba(131, 26, 26, 0.541);
+  z-index: 9;
 
 
 }
@@ -532,7 +588,7 @@ section[id] {
 }
 
 .right__tituloSub--dos {
-  font-size: 10px;
+  font-size: 15px;
   font-weight: 400;
   letter-spacing: 20px;
   margin-top: 10px;
@@ -545,11 +601,6 @@ section[id] {
   line-height: 21px;
   margin-top: 10px;
   text-align: justify;
-}
-
-.right__imagen--left {
-  width: 50%;
-  height: auto;
 }
 
 
@@ -848,11 +899,7 @@ section[id] {
   margin: 2em;
 }
 
-.iglesia__card:hover {
-  transform: scale(1.1);
-  transition: all .2s ease-in-out;
-  cursor: pointer;
-}
+
 
 .iglesia__cardTexto {
   grid-area: text;
@@ -898,6 +945,8 @@ section[id] {
   background-color: var(--color-cinco);
 }
 
+
+
 /*modificadores de imagen*/
 .iglesia__imagen--niños {
   grid-area: image;
@@ -908,6 +957,7 @@ section[id] {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 
 /*modificadores de preAdolescentes*/
 .iglesia__imagen--preAdolescentes {
