--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -9,7 +9,7 @@
         cursor: pointer;
     }
 
-    
+
     .aside__iframe {
         display: flex;
         width: 90%;
@@ -26,7 +26,7 @@
         margin: 4em auto;
     }
 
-    .aside__iframe--podcast{
+    .aside__iframe--podcast {
         margin: 2em auto;
     }
 }
@@ -69,7 +69,7 @@
         margin: 4em auto;
     }
 
-    .aside__iframe--podcast{
+    .aside__iframe--podcast {
         margin: 2em auto;
     }
 
@@ -860,6 +860,84 @@
     }
 
 
+    /* Mision Carrousel */
+    .mision__carrousel {
+        width: 90%;
+        height: 20%;
+        max-width: 120em;
+        background-color: lightskyblue;
+        z-index: 9;
+
+        display: flex;
+        flex-flow: column;
+        align-items: flex-start;
+        justify-content: center;
+
+        overflow: hidden;
+
+
+
+
+    }
+
+    .mision__grande {
+        width: 200%;
+
+        background-color: orange;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0em;
+
+        transition: all .5s ease;
+        transform: translateX(0%);
+    }
+
+    .grande--img {
+        width: calc(100% /2);
+        object-fit: cover;
+        height: auto;
+        background-color: lime;
+        padding: 1em;
+    }
+
+    .mision__carrousel--puntos {
+        width: 100%;
+        height: 100vh;
+        background-color: #c0392b;
+        padding: 1em;
+
+
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: center;
+
+
+
+    }
+
+    .btn-punto {
+        width: 2em;
+        height: 2em;
+        background-color: #a33a80;
+        margin: 1em;
+        cursor: pointer;
+    }
+
+    .carrousel__punto--activo {
+        background-color: orange;
+    }
+
+
+
+
+
+
+
+
+
 
     /*Precursores (Videos de Youtube*/
     .aside {
@@ -1222,6 +1300,7 @@
         padding: 40px;
         background: rgba(255, 255, 255, 0.1);
         box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+
         z-index: 1;
     }
 
